---- CODE FREEZE FOR SANE 1.0.12 ---
-- snapshot 1.0.12-pre2

2003-05-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* NEWS: Updated.
	* doc/descriptions/unsupported.desc: Added Mustek ScanMagic 9636P.
	* TODO: Added epson/saned/xsane problem.
	* configure configure.in: Disabled compilation warnings.
	* tools/Makefile.in: Added sane-po.awk to DISTFILES.

2003-05-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Minor fix for Spot scanners.

2003-05-15  Gerhard Jaeger <gerhard@gjaeger.de>
	* TODO: status of UMAX 3450 is fixed now in .desc
	* descriptions/plustek.desc: update
	* doc/plustek/Plustek-USB-TODO.txt doc/plustek/Plustek-USB.txt
	  doc/plustek/Plustek.changes: update
	* backend/plustek-devs.c backend/plustek-pp.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-usbimg.c
	  backend/plustek-usbio.c backend/plustek-usbmap.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.c backend/plustek.h backend/plustek-share.h
	  backend/plustek-usb.h:
	  Major bugfix release, cancel should work now, calibration for
	  CIS devices is now fully functional

2003-05-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Updates for Canon
	  scanners. Added Spot scanners.
	* aclocal.m4 acinclude.m4 configure: Fixed MacOS X build (patch
	  from Mattias Ellert <mattias.ellert@tsl.uu.se>).
	* doc/sane-gt68xx.man: Fixed wrong example.

2003-05-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/Makefile.in: Added missing $(DESTDIR).
	* TODO: Minor updates.

2003-05-12  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.fr.po: Updated french translation (from Yann
	  E. MORIN <yann dot morin dot 1998 at anciens dot enib dot fr>).
	* frontends/saned.c: Replaces a strncmp() call by a macro detecting
	  V4-mapped address. This is a lot safer than the strncmp, and doesn't